RESOLVED FIXED120174
Don't leak registers for redeclared variables
https://bugs.webkit.org/show_bug.cgi?id=120174
Summary Don't leak registers for redeclared variables
Gavin Barraclough
Reported 2013-08-22 15:00:31 PDT
We currently always allocate registers for new global variables, but these are wasted when the variable is being redeclared. Only allocate new registers when necessary.
Attachments
Fix (3.44 KB, patch)
2013-08-22 15:02 PDT, Gavin Barraclough
ggaren: review+
Gavin Barraclough
Comment 1 2013-08-22 15:02:25 PDT
Gavin Barraclough
Comment 2 2013-08-22 15:40:57 PDT
Comment on attachment 209397 [details] Fix Ooops, self r+!
Geoffrey Garen
Comment 3 2013-08-22 16:02:12 PDT
Comment on attachment 209397 [details] Fix r=me
Gavin Barraclough
Comment 4 2013-08-23 10:50:14 PDT
Committed revision 154466.
Note You need to log in before you can comment on or make changes to this bug.